--- a/src/languages/ru.json
+++ b/src/languages/ru.json
@@ -1,6 +1,6 @@
 {
   "about me": "О себе",
-  "skills": "Умения",
+  "skills": "Навыки",
   "projects": "Проекты",
   "contacts": "Контакты",
   "hey! i'm Davit": "Привет! я Давид"
