fixing some translation connected projects

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1,7 +1,7 @@
 {
-  "about me": "About Me",
+  "about_me": "About Me",
   "skills": "Skills",
   "projects": "Projects",
   "contacts": "Contacts",
-  "hey! i'm Davit": "Hey ! I'm Davit"
+  "welcome_note": "Hey ! I'm Davit"
 }
