--- a/src/languages/hy.json
+++ b/src/languages/hy.json
@@ -1,8 +1,7 @@
 {
-  "about me": "Իմ մասին",
+  "about_me": "Իմ մասին",
   "skills": "Հմտություններ",
   "projects": "Նախագծեր",
   "contacts": "Կապ",
-  "hey! i'm Davit": "Բարեւ! Ես Դավիթն եմ"
-
+  "welcome_note": "Բարեւ! Ես Դավիթն եմ"
 }
