--- a/src/languages/ru.json
+++ b/src/languages/ru.json
@@ -1,7 +1,7 @@
 {
-  "about me": "О себе",
+  "about_me": "О себе",
   "skills": "Навыки",
   "projects": "Проекты",
   "contacts": "Контакты",
-  "hey! i'm Davit": "Привет! я Давид"
+  "welcome_note": "Привет! я Давид"
 }
