add aboute me page

--- a/src/languages/hy.json
+++ b/src/languages/hy.json
@@ -3,5 +3,11 @@
   "skills": "Հմտություններ",
   "projects": "Նախագծեր",
   "contacts": "Կապ",
-  "welcome_note": "Բարեւ! Ես Դավիթն եմ"
+  "welcome_note": "Բարեւ! Ես Դավիթն եմ",
+  "name_surname": "Դավիթ Տոնոյան",
+  "about_me_content": "Ես Դավիթ Տոնոյանն  եմ,   ծնծվել եմ հունվարի 1-ին 1999թ :\nՍովորել եմ Ս.Սպանդարյանի անվան թիվ 24 դպրոցը ՝ ( 2005-2007թթ) , Ռ.Եղոյանի անվան թիվ 1 դպրոցը ՝ (2007-2010) , Վ. Բախշյանի թիվ  2 դպրոցը (2010-2014) և Արմավիրի թիվ 4 ավագ դպրոցը:\nԱվարտել եմ Հայաստանի Պետական  Տնտեսագիտական Համալսարանը ՝ (2016-2020) : \nԱվարտել եմ Փարաքարի Հ. Էդգարյանի արվեստի դպրոցի շվիի բաժինը՝ (2007-2012):\nԱվարտել եմ Արմավիր քաղաքի համար 1 երաժշտական դպրոցի կլարնետի  բաժինը՝ (2012-2016):\n Արդեն 1 տարի է զբաղվում եմ ծրագտաորմամբ : ",
+  "short_about_me": "Կարճ իմ մասին",
+  "zey_shop": "That is Shop Site",
+  "admin": "This is Admin page",
+  "todo": "This is todo page"
 }
