--- a/src/languages/ru.json
+++ b/src/languages/ru.json
@@ -3,5 +3,11 @@
   "skills": "Навыки",
   "projects": "Проекты",
   "contacts": "Контакты",
-  "welcome_note": "Привет! я Давид"
+  "welcome_note": "Привет! я Давид",
+  "name_surname": "Давид Тоноян",
+  "about_me_content": "Меня зовут Давид Тоноян, я родился 1 января 1999 года.\nУчился в школе № 24 имени С. Спандаряна (2005-2007), школе № 1 имени Р. Егояна (2007-2010), В. Бахшянская школа № 2 (2010-2014 гг.) и Армавирская средняя школа № 4.\nОкончил Государственный экономический университет Армении (2016-2020).\nЯ закончил Parakari H. Школа искусств Эдгаряна, факультет изобразительных искусств: (2007-2012).\nОкончила отделение кларнета 1-й музыкальной школы города Армавира (2012-2016).\n  Занимаюсь программированием 1 год.",
+  "short_about_me": "Коротко обо мне",
+  "zey_shop": "That is Shop Site",
+  "admin": "This is Admin page",
+  "todo": "This is todo page"
 }
