--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -3,5 +3,11 @@
   "skills": "Skills",
   "projects": "Projects",
   "contacts": "Contacts",
-  "welcome_note": "Hey ! I'm Davit"
+  "welcome_note": "Hey ! I'm Davit",
+  "name_surname": "Davit Tonoyan",
+  "about_me_content": "My name is Davit Tonoyan, I was born on January 1, 1999.\nI studied at school No. 24 named after S. Spandaryan (2005-2007), school No. 1 named after R. Yeghoyan (2007-2010), V. Bakhshyan School No. 2 (2010-2014) and Armavir High School No. 4.\nI graduated from the State University of Economics of Armenia (2016-2020).\nI graduated from Parakari H. Edgaryan School of Art, Department of Fine Arts: (2007-2012).\nI graduated from the clarinet department of the 1st music school for the city of Armavir (2012-2016).\n  I have been engaged in programming for 1 year.",
+  "short_about_me": "Shortly about me",
+  "zey_shop": "That is Shop Site",
+  "admin": "This is Admin page",
+  "todo": "This is todo page"
 }
