--- a/src/languages/ru.json
+++ b/src/languages/ru.json
@@ -5,8 +5,15 @@
   "contacts": "Контакты",
   "welcome_note": "Привет! я Давид",
   "name_surname": "Давид Тоноян",
-  "about_me_content": "Меня зовут Давид Тоноян, я родился 1 января 1999 года.\nУчился в школе № 24 имени С. Спандаряна (2005-2007), школе № 1 имени Р. Егояна (2007-2010), В. Бахшянская школа № 2 (2010-2014 гг.) и Армавирская средняя школа № 4.\nОкончил Государственный экономический университет Армении (2016-2020).\nЯ закончил Parakari H. Школа искусств Эдгаряна, факультет изобразительных искусств: (2007-2012).\nОкончила отделение кларнета 1-й музыкальной школы города Армавира (2012-2016).\n  Занимаюсь программированием 1 год.",
+  "about_me_content": "Меня зовут Давид Ашотович Тоноян. Я родился 01.01.1999 года в городе Армавир (республика Армения) Армавирской области.",
   "short_about_me": "Коротко обо мне",
+  "education": "Образование",
+  "school": "В 2005-2016 годах учился и окончил Армавирскую среднюю школу N4.",
+  "shvi": "В 2006-2011 годах учился и окончил художественную школу , отдел шви имени О.Эдгаряна общины Паракар.",
+  "klarnet": "В 2011-2015 годах учился и окончил отделение кларнета Армавирской музыкальной школы.",
+  "university": "В 2016-2020 годах учился и окончил бухгалтерский факультет Государственного Экономического Университета Армении ( ГЭУА )",
+  "teache_me": "С 05.10.2021-05.04.2022 года посещал курс программирования.",
+  "job": "01.06.2022-30.12.2022 работал в компании Group 404 как  Frontend Developer  над созданием основного сайта компании и  сделал  фриланси 3-ех проектов на российском рынке.",
   "zey_shop": "That is Shop Site",
   "admin": "This is Admin page",
   "todo": "This is todo page"
