--- a/src/languages/hy.json
+++ b/src/languages/hy.json
@@ -5,8 +5,15 @@
   "contacts": "Կապ",
   "welcome_note": "Բարեւ! Ես Դավիթն եմ",
   "name_surname": "Դավիթ Տոնոյան",
-  "about_me_content": "Ես Դավիթ Տոնոյանն  եմ,   ծնծվել եմ հունվարի 1-ին 1999թ :\nՍովորել եմ Ս.Սպանդարյանի անվան թիվ 24 դպրոցը ՝ ( 2005-2007թթ) , Ռ.Եղոյանի անվան թիվ 1 դպրոցը ՝ (2007-2010) , Վ. Բախշյանի թիվ  2 դպրոցը (2010-2014) և Արմավիրի թիվ 4 ավագ դպրոցը:\nԱվարտել եմ Հայաստանի Պետական  Տնտեսագիտական Համալսարանը ՝ (2016-2020) : \nԱվարտել եմ Փարաքարի Հ. Էդգարյանի արվեստի դպրոցի շվիի բաժինը՝ (2007-2012):\nԱվարտել եմ Արմավիր քաղաքի համար 1 երաժշտական դպրոցի կլարնետի  բաժինը՝ (2012-2016):\n Արդեն 1 տարի է զբաղվում եմ ծրագտաորմամբ : ",
+  "about_me_content": "Ես Դավիթ Աշոտի Տոնոյանն եմ: Ծնվել եմ 01.01.1999թ Արմավիր մարզի Արմավիր քաղաքում:",
   "short_about_me": "Կարճ իմ մասին",
+  "education": "Կրթություն",
+  "school": "2005-2016թթ սովորել և ավարտել եմ Արմավիրի N4 ավագ դպրոցը:",
+  "shvi": "2006-2011թթ սովորել և ավարտել եմ  Փարաքար համայնքի Հ. Էդգարյանի անվան արվեստի դպրոցի շվիի բաժինը:",
+  "klarnet": "2011-2015թթ Սովորել և ավարտել եմ Արմավիրի երաժշտական դպրոցի կլարնետի  բաժինը:",
+  "university": "2016-2020թթ սովորել և ավարտել եմ Հայաստանի Պետական \u200B\u200BՏնտեսագիտական \u200B\u200BՀամալսարանի (ՀՊՏՀ) հաշվապահական հաշվառման ֆակուլտետը։",
+  "teache_me": "05.10.2021-05.04.2022 հաճախել եմ ծրագրավորման դասնթացների:",
+  "job": "01.06.2022-30.12.2022 աշխատել եմ Group 404 ընկերությունում որպես Frontend Developer. Աշխատել եմ ընկերության հիմնական կայքի ստեղծման վրա: Աշխատել եմ որպես freelancer ռուսական շուկայում 3 նախագծերի վրա: ",
   "zey_shop": "That is Shop Site",
   "admin": "This is Admin page",
   "todo": "This is todo page"
