--- a/src/languages/hy.json
+++ b/src/languages/hy.json
@@ -15,6 +15,9 @@
   "teache_me": "05.10.2021-05.04.2022 հաճախել եմ ծրագրավորման դասնթացների:",
   "job": "01.06.2022-30.12.2022 աշխատել եմ Group 404 ընկերությունում որպես Frontend Developer. Աշխատել եմ ընկերության հիմնական կայքի ստեղծման վրա: Աշխատել եմ որպես freelancer ռուսական շուկայում 3 նախագծերի վրա: ",
   "zey_shop": "That is Shop Site",
+  "zey_shop_description": "Սա խանութի կայքի դիզայն է: Սա թեստային կայք է որտեղ փորձել  եմ օգտագործել և ամրապնդել սլայդների հետ կապված գիտելիքներս : ",
   "admin": "This is Admin page",
-  "todo": "This is todo page"
+  "admin_description": "Այս կայքը նախատեսված է օնլայն խանութի համար որը օգտագործողին  հնարավորություն է տալիս   գրանցվել և մուտք գործել էջ , ավելացնել ապրանքներ ,   դասակարգել դրանք  և ալն : Կայք մուտք գործելու համար անհրաժեշ է այցելել www.crudcrud.com պատճենել հասցեն և դնել այն \"src-routhes\" թղթապանակի մեջ:",
+  "todo": "This is todo page",
+  "todo_description" : "Սա ToDo ցանկ է որտեղ կարող եք ավելացնել գործողություններ որոնք ապագայում պետք է անել , նշել արդեն ավարտած գործողությունները  ՝ փոխել դրանք կամ ջնջել: Արդյունքը  կարող եք տեսնել վերևի մասում:"
 }
