--- a/src/languages/ru.json
+++ b/src/languages/ru.json
@@ -15,6 +15,9 @@
   "teache_me": "С 05.10.2021-05.04.2022 года посещал курс программирования.",
   "job": "01.06.2022-30.12.2022 работал в компании Group 404 как  Frontend Developer  над созданием основного сайта компании и  сделал  фриланси 3-ех проектов на российском рынке.",
   "zey_shop": "That is Shop Site",
+  "zey_shop_description": "Это дизайн сайта магазина. Это тестовый сайт, на котором я пытался использовать и укреплять свои знания о слайдах.",
   "admin": "This is Admin page",
-  "todo": "This is todo page"
+  "admin_description" : "Этот сайт предназначен для интернет-магазина, который позволяет пользователю регистрироваться и заходить на страницу, добавлять товары, классифицировать их и т. д. Для доступа к сайту необходимо посетить www.crudcrud.com, скопировать адрес и положить его в папку «src-routhes».",
+  "todo": "This is todo page",
+  "todo_description": "Это список дел, в который можно добавлять действия, которые необходимо выполнить в будущем, отмечать уже выполненные действия, изменять их или удалять. Вы можете увидеть результат выше."
 }
