about descriptions changing

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -5,15 +5,15 @@
   "contacts": "Contacts",
   "welcome_note": "Hey ! I'm Davit",
   "name_surname": "Davit Tonoyan",
-  "about_me_content": "My name is Davit Ashot Tonoyan. I was born on 01.01.1999 in the city of Armavir, Armavir region.",
+  "about_me_content": "I am Davit Tonoyan. I was born January 1st, 1999 in Armavir city of the Armavir region.",
   "short_about_me": "Shortly about me",
   "education": "Education",
-  "school": "In 2005-2016, I studied and graduated from Armavir N4 High School.",
-  "shvi": "shvi",
-  "klarnet": "2011-2015 I studied and graduated from the clarinet department of the Armavir Music School.",
-  "university": "",
+  "school": "From 2005 to 2016, I studied and graduated from high school #4 of Armavir city. ",
+  "shvi": "From 2006 to 2011, I studied and graduated from H. Edgaryan art school in Parakar county while specializing in playing the shvi (wooden flute).",
+  "klarnet": "From 2011 to 2015, I studied and graduated from the Armavir music school while specializing in playing the clarinet. ",
+  "university": "From 2016 to 2020, I studied and graduated from the Armenian State University of Economics (ASUE), majoring in accounting. ",
   "teache_me": "05.10.2021-05.04.2022 took courses in programming.",
-  "job": "06.01.2022-12.30.2022 worked at Group 404 as a Frontend Developer on the creation of the company's main website and freelanced 3 projects in the Russian market.",
+  "job": " From June , 2022 to December 2022, I worked for Group 404 as a frontend developer. I worked on creating the company’s official website. I worked as a freelancer in a Russian market on three different projects.",
   "zey_shop": "That is Shop Site",
   "zey_shop_description": "This is a store website design. This is a test site where I tried to use and strengthen my knowledge about slides.",
   "admin": "This is Admin page",
