--- a/src/languages/ru.json
+++ b/src/languages/ru.json
@@ -19,5 +19,7 @@
   "admin": "This is Admin page",
   "admin_description" : "Этот сайт предназначен для интернет-магазина, который позволяет пользователю регистрироваться и заходить на страницу, добавлять товары, классифицировать их и т. д. Для доступа к сайту необходимо посетить www.crudcrud.com, скопировать адрес и положить его в папку «src-routhes».",
   "todo": "This is todo page",
-  "todo_description": "Это список дел, в который можно добавлять действия, которые необходимо выполнить в будущем, отмечать уже выполненные действия, изменять их или удалять. Вы можете увидеть результат выше."
+  "todo_description": "Это список дел, в который можно добавлять действия, которые необходимо выполнить в будущем, отмечать уже выполненные действия, изменять их или удалять. Вы можете увидеть результат выше.",
+  "s_house_description": "hayeren"
+
 }
