--- a/src/languages/hy.json
+++ b/src/languages/hy.json
@@ -19,7 +19,6 @@
   "admin": "This is Admin page",
   "admin_description": "Այս կայքը նախատեսված է օնլայն խանութի համար որը օգտագործողին  հնարավորություն է տալիս   գրանցվել և մուտք գործել էջ , ավելացնել ապրանքներ ,   դասակարգել դրանք  և ալն : Կայք մուտք գործելու համար անհրաժեշ է այցելել www.crudcrud.com պատճենել հասցեն և դնել այն \"src-routhes\" թղթապանակի մեջ:",
   "todo": "This is todo page",
-  "todo_description" : "Սա ToDo ցանկ է որտեղ կարող եք ավելացնել գործողություններ որոնք ապագայում պետք է անել , նշել արդեն ավարտած գործողությունները  ՝ փոխել դրանք կամ ջնջել: Արդյունքը  կարող եք տեսնել վերևի մասում:",
-  "s_house_description": "hayeren"
-
+  "todo_description": "Սա ToDo ցանկ է որտեղ կարող եք ավելացնել գործողություններ որոնք ապագայում պետք է անել , նշել արդեն ավարտած գործողությունները  ՝ փոխել դրանք կամ ջնջել: Արդյունքը  կարող եք տեսնել վերևի մասում:",
+  "s_house_description": "Այս կայքում ներկայացված է խանութի , անձնակազմի , ապրանքների տեսականինեի  մասին տեղեկություն : Կայքում կարող եք թողնել Ձեր կարծիքը:"
 }
