make some changes about my descriptionԵս այժմ աշխատում եմ որպես  Web-Developer դասավանդող ուսուցիչ Learn Code It դպրոցում: 2022 թվականի հունվարից մինչև 2023 թվականի մարտը ես աշխատել եմ որպես Վեբ-ծրագրավորող Group 404-ում, որտեղ ստեղծել եմ մի քանի կայքեր, այդ թվում՝ ընկերության հիմնական կայքը և հաշվապահական նախագիծ: Դրանից հետո աշխատել եմ նաև որպես ֆրիլանսեր և մի քանի նախագծեր եմ իրականացրել։

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -13,7 +13,7 @@
   "klarnet": "From 2011 to 2015, I studied and graduated from the Armavir music school while specializing in playing the clarinet. ",
   "university": "From 2016 to 2020, I studied and graduated from the Armenian State University of Economics (ASUE), majoring in accounting. ",
   "teache_me": "05.10.2021-05.04.2022 took courses in programming.",
-  "job": " From June , 2022 to December 2022, I worked for Group 404 as a frontend developer. I worked on creating the company’s official website. I worked as a freelancer in a Russian market on three different projects.",
+  "job": "Currently, I work as a frontend development instructor at Learn Code It School. From January 2022 to March 2023, I worked as a frontend developer at Group 404, where I created several websites, including the company's main website and an accounting project. After that, I also freelanced and completed several projects.\n\nI always strive for self-improvement and enjoy acquiring new skills. Being open to learning and mastering new technologies is an important part of my work approach. I enjoy working in teams and can quickly adapt to new companies and projects.",
   "zey_shop": "That is Shop Site",
   "zey_shop_description": "This is a store website design. This is a test site where I tried to use and strengthen my knowledge about slides.",
   "admin": "This is Admin page",
@@ -21,5 +21,4 @@
   "todo": "This is todo page",
   "todo_description": "This is a ToDo list where you can add actions that need to be done in the future, mark already completed actions, change them or delete them. You can see the result above.",
   "s_house_description": "This website presents information about the store, staff, and assortment of products.You can leave your opinion on the site."
-
 }
