--- a/src/languages/ru.json
+++ b/src/languages/ru.json
@@ -13,7 +13,7 @@
   "klarnet": "В 2011-2015 годах учился и окончил отделение кларнета Армавирской музыкальной школы.",
   "university": "В 2016-2020 годах учился и окончил бухгалтерский факультет Государственного Экономического Университета Армении ( ГЭУА )",
   "teache_me": "С 05.10.2021-05.04.2022 года посещал курс программирования.",
-  "job": "01.06.2022-30.12.2022 работал в компании Group 404 как  Frontend Developer  над созданием основного сайта компании и  сделал  фриланси 3-ех проектов на российском рынке.",
+  "job": "В настоящее время я работаю преподавателем по frontend-разработке в школе Learn Code It. С января 2022 года по март 2023 года я был frontend-разработчиком в компании Group 404, где создавал несколько веб-сайтов, включая основной сайт компании и проект по бухгалтерии. Кроме того, я также занимался фрилансом и выполнел несколько проектов.\n\nЯ постоянно стремлюсь к саморазвитию и с удовольствием осваиваю новые навыки. Готовность к обучению и изучению новых технологий является важной частью моего подхода к работе. Мне нравится работать в команде, и я быстро адаптируюсь к новым компаниям и проектам.",
   "zey_shop": "That is Shop Site",
   "zey_shop_description": "Это дизайн сайта магазина. Это тестовый сайт, на котором я пытался использовать и укреплять свои знания о слайдах.",
   "admin": "This is Admin page",
