--- a/src/languages/hy.json
+++ b/src/languages/hy.json
@@ -13,8 +13,8 @@
   "klarnet": "2011-2015թթ Սովորել և ավարտել եմ Արմավիրի երաժշտական դպրոցի կլարնետի  բաժինը:",
   "university": "2016-2020թթ սովորել և ավարտել եմ Հայաստանի Պետական \u200B\u200BՏնտեսագիտական \u200B\u200BՀամալսարանի (ՀՊՏՀ) հաշվապահական հաշվառման ֆակուլտետը։",
   "teache_me": "05.10.2021-05.04.2022 հաճախել եմ ծրագրավորման դասնթացների:",
-  "job": "01.06.2022-30.12.2022 աշխատել եմ Group 404 ընկերությունում որպես Frontend Developer. Աշխատել եմ ընկերության հիմնական կայքի ստեղծման վրա: Աշխատել եմ որպես freelancer ռուսական շուկայում 3 նախագծերի վրա: ",
-  "zey_shop": "That is Shop Site",
+  "job": "Ես այժմ աշխատում եմ որպես  Web-Developer դասավանդող ուսուցիչ Learn Code It դպրոցում: 2022 թվականի հունվարից մինչև 2023 թվականի մարտը ես աշխատել եմ որպես Վեբ-ծրագրավորող Group 404-ում, որտեղ ստեղծել եմ մի քանի կայքեր, այդ թվում՝ ընկերության հիմնական կայքը և հաշվապահական նախագիծ: Դրանից հետո աշխատել եմ նաև որպես ֆրիլանսեր և մի քանի նախագծեր եմ իրականացրել։\nԵս միշտ ձգտում եմ ինքնակատարելագործման և \n հաճույք եմ ստանում նոր հմտություններ ձեռք բերելուց։ Ինձ դուր է գալիս թիմային աշխատանքը , կարող եմ արագ հարմարվել նոր միջավայրին  և նախագծերին:\nԸնկերասեր և հանգիստ բնավորության տեր մարդ եմ : ",
+   "zey_shop": "That is Shop Site",
   "zey_shop_description": "Սա խանութի կայքի դիզայն է: Սա թեստային կայք է որտեղ փորձել  եմ օգտագործել և ամրապնդել սլայդների հետ կապված գիտելիքներս : ",
   "admin": "This is Admin page",
   "admin_description": "Այս կայքը նախատեսված է օնլայն խանութի համար որը օգտագործողին  հնարավորություն է տալիս   գրանցվել և մուտք գործել էջ , ավելացնել ապրանքներ ,   դասակարգել դրանք  և ալն : Կայք մուտք գործելու համար անհրաժեշ է այցելել www.crudcrud.com պատճենել հասցեն և դնել այն \"src-routhes\" թղթապանակի մեջ:",
